Added hover effect

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ca-number-display-container">
   <span class="ca-number-display-text">AC</span>
 </div>
-<div class="ca-numberpad-container">
+<div class="ca-numberpad-container noselect">
   <div class="ca-row-container">
     <div class="ca-item-container">
       <div class="ca-button unary-operator">
@@ -64,7 +64,7 @@
     </div>
     <div class="ca-item-container">
       <div class="ca-button operator">
-        <span class="ca-button-text">-</span>
+        <span class="ca-button-text">_</span>
       </div>
     </div>
   </div>
