--- a/app/app.component.css
+++ b/app/app.component.css
@@ -45,6 +45,10 @@
     height: 100%;
     cursor: pointer;
   }
+  .ca-button:hover {
+    background-color: inherit;
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+  }
   .ca-button-text {
     display: table-cell;
     font-size: x-large;
