--- a/app/app.component.css
+++ b/app/app.component.css
@@ -46,8 +46,7 @@
     cursor: pointer;
   }
   .ca-button:hover {
-    background-color: inherit;
-    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    opacity: 0.8;
   }
   .ca-button-text {
     display: table-cell;
